Fixed Recipe Image being too large

--- a/client/src/components/Recipe/Recipe.css
+++ b/client/src/components/Recipe/Recipe.css
@@ -75,7 +75,9 @@
     width: 86%;
 }
 
-
+.mh-400px {
+    max-height: 500px;
+}
 
 /* GENERAL LAYOUT */
 .like-button-container,
